Added applications endpoint + Updated project structure
