# sources/spring-server/src/main/java/ch/heigvd/gamification/api/EventsApiController.java
@@ -1,0 +1,26 @@
+/*
+ * To change this license header, choose License Headers in Project Properties.
+ * To change this template file, choose Tools | Templates
+ * and open the template in the editor.
+ */
+package ch.heigvd.gamification.api;
+
+import ch.heigvd.gamification.api.dto.GameEvent;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+
+/**
+ *
+ * @author Antony
+ */
+@RestController
+public class EventsApiController implements EventsApi{
+
+    @Override
+    public ResponseEntity<GameEvent> eventsPost(GameEvent newPointScale) {
+        throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
+    }
+    
+    
+    
+}
