# sources/spring-server/src/main/resources/api-spec.yaml
@@ -11,8 +11,8 @@ info:
   license:
     name: MIT
     url: https://github.com/antonyciani/AMT_GamificationProject
-host: localhost
-basePath: /
+host: localhost:8080
+basePath: /api
 schemes:
   - http
 
@@ -38,6 +38,12 @@ paths:
       produces:
         - application/json
       parameters:
+        - name: authToken
+          in: header
+          description: The token authenticating the application related to the badge
+          required: true
+          type: string
+            
         - name: newBadge
           in: body
           description: Badge to add to the system
@@ -144,6 +150,90 @@ paths:
       responses:
         '204':
           description: pointScale deleted
+          
+          
+  /applications:
+    get:
+      description: Returns all applications from the system that the user has access to
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: applications response
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/gamifiedApplicationToClient'
+        
+    post:
+      description: Registers a new application in the system.  Duplicates are not allowed
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: newGamifiedApplication
+          in: body
+          description: PointScale to add to the system
+          required: true
+          schema:
+            $ref: '#/definitions/newGamifiedApplication'
+      responses:
+        '200':
+          description: pointScale response
+          schema:
+            $ref: '#/definitions/gamifiedApplicationToClient'
+        
+  /applications/{id}:
+    get:
+      description: Returns the details of the application based on a single ID
+      produces:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          description: ID of gamified application to fetch
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: application response
+          schema:
+            $ref: '#/definitions/gamifiedApplicationToClient'
+        
+    delete:
+      description: deletes a single application based on the ID supplied
+      parameters:
+        - name: id
+          in: path
+          description: ID of application to delete
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '204':
+          description: application deleted
+          
+  /events:
+    post:
+      description: Send events to the event processor
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: newPointScale
+          in: body
+          description: PointScale to add to the system
+          required: true
+          schema:
+            $ref: '#/definitions/gameEvent'
+      responses:
+        '200':
+          description: gameEvent response
+          schema:
+            $ref: '#/definitions/gameEvent'
         
 
 definitions:
@@ -237,8 +327,11 @@ definitions:
     type: object
     required:
       - name
+      - password
     properties:
       name:
+        type: string
+      password:
         type: string
       
   gamifiedApplicationToClient:
@@ -260,12 +353,14 @@ definitions:
   gameEvent:
     type: object
     required:
-      - appId
+      - appUserId
+      - eventType
       - data
     properties:
-      appId:
+      appUserId:
         type: integer
         format: int64
+      eventType:
+        type: string
       data:
         type: string
-      
